--- a/portolio_site_app/assets/css/main.css
+++ b/portolio_site_app/assets/css/main.css
@@ -3118,10 +3118,12 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
+		/* background-color: #4686a0; */
+        background-color: white;
+		/* color: rgba(255, 255, 255, 0.75); */
+        color: black;
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
+		/* background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%); */
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
@@ -3537,7 +3539,8 @@ input, select, textarea {
 .andyImg{
     width: 300px;
     border-radius: 15px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (max-width: 980px) {
